--- a/src/productDetails/index.html
+++ b/src/productDetails/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,12 +9,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header id="main-header"></header>
 
-    <main class="container my-5" id="main-content">
+    <main class="container my-5 pt-md-5" id="main-content">
       <!-- Product details will be rendered here -->
     </main>
 
