Finish adding Wishlist feature

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <body>
     <header id="main-header"></header>
 
-    <main class="container my-5 pt-md-5" id="main-content">
+    <main class="container my-2 my-md-5 pt-md-5 p-4" id="main-content">
       <!-- Product grid will be rendered here -->
     </main>
 
