finish wishlist feature

--- a/src/wishlist/index.html
+++ b/src/wishlist/index.html
@@ -11,8 +11,8 @@
   <body>
     <header id="main-header"></header>
     <main class="container my-5 pt-md-5" id="main-content">
-      <h1 class="mb-4">My Wishlist</h1>
-      <div id="wishlist-container">
+      <h1 class="mb-4 text-center">My Wishlist</h1>
+      <div id="wishlist-container" class="p-2">
         <!-- Wishlist items will be rendered here -->
       </div>
     </main>
