--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="EngageMart - Your interactive shopping experience for quality products" />
+    <meta name="keywords" content="shopping, online store, products, electronics, clothing, jewelry" />
     <title>EngageMart - Products</title>
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://qrighqmmqbchmhnvdlik.supabase.co">
     <!-- Bootstrap CSS CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
